# obsidian-edge

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  README.md  build_cached.sh  build_fresh.sh
src/engine/: CMakeLists.txt
src/engine/include/engine/: entry_point.h  obsidian_edge.h
src/engine/include/engine/core/: core.h  pch.h
src/engine/include/engine/core/application/: application.h  window.h
src/engine/include/engine/core/data/: args.h
src/engine/include/engine/core/data/vector/: vector2.h  vector2i.h
src/engine/include/engine/core/event/: event.h  event_app.h  event_application.h  event_key.h  event_keyboard.h  event_mouse.h  input_codes.h
src/engine/include/engine/core/log/: logger.h
src/engine/include/engine/core/platform/: window_linux.h  window_windows.h
src/engine/include/engine/core/tree/: base.h
src/engine/source/engine/core/application/: application.cpp  window.cpp
src/engine/source/engine/core/data/: args.cpp
src/engine/source/engine/core/data/vector/: vector2.cpp  vector2i.cpp
src/engine/source/engine/core/event/: event.cpp  event_app.cpp  event_key.cpp  event_mouse.cpp
src/engine/source/engine/core/layer/: layer.cpp  layer_stack.cpp
src/engine/source/engine/core/log/: logger.cpp
src/engine/source/engine/core/platform/: window_linux.cpp  window_windows.cpp
src/engine/source/engine/core/tree/: base.cpp
src/hammer/: CMakeLists.txt
src/hammer/source/: hammer.cpp
test/: test_standalone.cpp
